--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,3 +6,5 @@
   <!-- <error>required</error> -->
   <button (click)="fun()" [disabled]="loginForm.invalid">Submit</button>
 </form>
+<br /><br />
+<div #div class="colorDiv"></div>
